Alterando texto do formato de horario

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Michael Silva</h2>
     <h1>Olá bem-vindo(a)!!</h1>
            
-    <p>Esse é o horário de Brasília atual</p>
+    <p>Horário GMT - horário de Brasília</p>
     <br><br>
 
     <div id="display">
